Fixed the statusbar in the new layout

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
     background-color: #ffff90;
 }
 
-.stats-cells-yellow {
+.stats-cells-blue {
     text-align: center;
     background-color: #ffff90;
     width:12.5%;
