Backpack now correctly shows which items you have

--- a/unused/stylechange.css
+++ b/unused/stylechange.css
@@ -153,7 +153,7 @@ body{
     transform: scale(1.5);
 }
 
-#backpackitems{
+#backpack-cnt{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
