Implemented the driveAround, added framework for gas station (it's just shown as being under construction) Finished all pee functions, just some need test. Started implementing some choices as listeners.

--- a/unused/stylechange.css
+++ b/unused/stylechange.css
@@ -223,6 +223,15 @@ body{
     text-align: center;
 }
 
+.cListener {
+    cursor: pointer;
+    color: #000088;
+}
+
+.cListener:hover {
+   color: #888800;
+}
+
 #perDecErr {
     display: none;
     color: #fa0202;
