--- a/unused/stylechange.css
+++ b/unused/stylechange.css
@@ -111,7 +111,12 @@ body{
 
 .stats-cells-green{
     text-align: center;
-    background-color: #e8ec9c;
+    background-color: #b5ff9d;
+}
+
+.stats-cells-red{
+    text-align: center;
+    background-color: #ef7878;
 }
 
 .cell-width {
